# PathFinder

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  manage.py  pyproject.toml
apps/core/: pagination.py
apps/dashboard/: urls.py  views.py
apps/jobs/: admin.py  applicant.py  apps.py  consumers.py  llm_client.py  matcher.py  models.py  notifier.py  profile_manager.py  services.py
common/: utils.py
config/: __init__.py  asgi.py  constants.py  profile.example.py  queries.py  settings.py  urls.py  ws_urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
core/: applicant.py  cutshort_fetcher.py  email_extractor.py  fetcher.py  matcher.py  notifier.py  profile_manager.py  technopark_fetcher.py  tracker.py  utils.py
dashboard/: admin.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_application_criteria_data_and_more.py  0003_alter_application_status_alter_job_status.py
dashboard/templates/: company_stats.html  job_detail.html  jobs.html  location_stats.html  missing_emails.html  overview.html  profile.html
dashboard/templatetags/: dashboard_filters.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  FetcherProgress.tsx  style.css
job_portal/: settings.py  wsgi.py
static/: index.html  style.css
static/assets/: index-6w6E1gQ1.js  index-C-NgO8l0.css  index-ChZyfP8O.js  index-DFHqjKJ_.js  index-DV6IarjF.css  index-DWL3oGlZ.js  index-UUcMDPz6.css  index-V_JmU73n.css
tests/: conftest.py  test_matcher.py  test_models.py  test_utils.py  test_views.py
(+66 files in other folders)
