[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "common*", "config*"]

[project]
name = "pathfinder"
version = "0.1.0"
description = "Automatic job portal — fetches, matches, and applies to Python developer jobs"
requires-python = ">=3.10"
authors = [{name = "Dennis Joseph"}]
license = "MIT"
readme = "README.md"
dependencies = [
    "django>=5.0",
    "httpx[http2]",
    "beautifulsoup4",
    "schedule",
    "python-dotenv",
    "lxml>=4.9",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "factory-boy",
    "ruff",
    "mypy",
    "django-stubs",
]

[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = ["tests", "apps"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.test"
